# SweatAI

./: .dockerignore  Dockerfile  README.md  app.py  index.html  pyproject.toml
.github/workflows/: ci.yml
